--- a/style.css
+++ b/style.css
@@ -1,92 +1,108 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
-.wrapper{
+
+.wrapper {
     background: url(littlemix.jpg)no-repeat;
     background-size: cover;
     height: 1000px;
 }
-.navbar{
+
+.navbar {
     height: 80px;
     width: 100%;
-    background: rgb(0,0,0,0.4)
+    background: rgb(0, 0, 0, 0.4)
 }
-.logo{
+
+.logo {
     width: 100px;
     height: auto;
     padding: 20px 100px;
 }
-.navbar ul{
+
+.navbar ul {
     float: right;
     margin-right: 30px;
 
 }
-.navbar ul li{
+
+.navbar ul li {
     list-style: none;
     margin: 0 10px;
     display: inline-block;
     line-height: 80px;
 }
-.navbar ul li a{
+
+.navbar ul li a {
     text-decoration: none;
     color: purple;
     font-size: 20px;
     padding: 6px 13px;
 }
+
 .navbar ul li a.active,
-.navbar ul li a :hover{
+.navbar ul li a :hover {
     background: blue;
     border-radius: 2px;
 }
-.center .p{
+
+.center .p {
     position: absolute;
     top: 50%;
     left: 55%;
-    transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%);
     font-family: sans-serif;
 }
 
 
 
 
-.blue{
+.blue {
     color: indigo;
 }
-.yellow{
+
+.yellow {
     color: hotpink;
 
 }
-.purple{
+
+.purple {
     color: darkblue;
 }
-.green{
+
+.green {
     color: darkmagenta;
 }
-.Nelson{
+
+.Nelson {
     width: 400px;
     border-radius: 250px;
     float: left;
     margin-left: 30px;
 }
-.Anne{
+
+.Anne {
     width: 300px;
     border-radius: 500px;
     float: right;
 }
-.jade{
+
+.jade {
     width: 200px;
     border-radius: 20px;
     float: left;
     margin-right: 30px;
 }
-.perrie{
+
+.perrie {
     width: 300px;
     border-radius: 10px;
     float: right;
-    
+
 }
-.buttons button{
+
+.buttons button {
     height: 50px;
     width: 150px;
     font-size: 18px;
