--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@
 }
 
 .footer{
-    background-color: blue;
+    background-color: rgb(21, 21, 199);
     text-align: center;
     padding: 20px;
     color: white;
